--- a/page-1.html
+++ b/page-1.html
@@ -70,10 +70,10 @@
     <section class="section-carousel">
         <div class="carousel">
             <div class="slide-container">
-                <img src="assets/img/dublin-0.jpg" alt="Image 1">
-                <img src="assets/img/dublin-1.jpg" alt="Image 2">
-                <img src="assets/img/dublin-2.jpg" alt="Image 3">
-                <img src="assets/img/dublin-3.jpg" alt="Image 3">
+                <img src="assets/img/slide-1/photo-01.jpg" alt="Image 1">
+                <img src="assets/img/slide-1/photo-02.jpg" alt="Image 2">
+                <img src="assets/img/slide-1/photo-03.jpg" alt="Image 3">
+                <!-- <img src="assets/img/dublin-3.jpg" alt="Image 3"> -->
                 <!-- Adicione quantas imagens quiser -->
             </div>
 
