--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                 <div class="col-4">
                     <figure class="photos-zoom photos-brightness" style="overflow: hidden;">
-                        <a href="page-1.html"><img src="https://lunevedy.com/ui/assets/img/400x600-biscuits.jpg" alt="Placeholder image"></a>
+                        <a href="page-1.html"><img src="assets/img/slide-1/photo-01.jpg" alt="Placeholder image"></a>
                     </figure><h3>Lunevedy Cafe</h3>	
                     
                     <p>Our friendly baristas are waiting to serve you. We use only hand roasted coffee and expertly selected tea leaves.</p>
