Updated the index page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container-text reveal-slide-up-header">
                 
                 
-            <h1 class="text-shadow">NAME HERE</h1>
+            <h1 class="text-shadow">Ingrid Passos</h1>
             <!-- <h2>PHOTOGRAPHER</h2> -->
             <!-- <h2>A sub-heading that motivates visitors to continue reading.</h2> -->
 
